// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with a space name entirely made of whitespace 1`] = `
<EuiAvatar
  color="#DB1374"
  data-test-subj="space-avatar-"
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;

exports[`renders without crashing 1`] = `
<EuiAvatar
  color="#BFA180"
  data-test-subj="space-avatar-"
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;
